Order: Remove back button from confo page

--- a/app/scripts/confirmation/templates/confirmation.html
+++ b/app/scripts/confirmation/templates/confirmation.html
@@ -1,4 +1,4 @@
-<ion-view title="Confirmacion">
+<ion-view title="Confirmacion" hide-back-button="true">
 
     <ion-content class="has-header" data-ng-controller="ConfirmationCtrl">
 
