--- a/app/scripts/confirmation/templates/confirmation.html
+++ b/app/scripts/confirmation/templates/confirmation.html
@@ -26,6 +26,12 @@
                 </a>
             </div>
 
+          <div class="item">
+            <a class="button button-block button-positive" href="#/app/menu">
+              Volver a menu
+            </a>
+          </div>
+
         </div>
 
         <!--<pre>{{order | json}}</pre>-->
