Confo: add order id sequence and display it on page

--- a/app/scripts/confirmation/templates/confirmation.html
+++ b/app/scripts/confirmation/templates/confirmation.html
@@ -5,6 +5,10 @@
         <div class="list card">
 
             <div class="item item-avatar">
+              ORDER ID: {{ order.id }}
+            </div>
+
+            <div class="item item-avatar">
                 <img src="">
                 <h2>Local</h2>
                 <p>Direccion: {{order.store.address}}</p>
