--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -13,13 +13,19 @@
 
     <ion-content class="has-header">
 
-      <pizzas bindonce data-ng-model="menu.pizza"></pizzas>
+      <div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu track by $index">
+        <strong data-bo-bind="cat.description"></strong>
+      </div>
 
-      <empanadas bindonce data-ng-model="menu.empanada"></empanadas>
 
-      <bebidas bindonce data-ng-model="menu.bebida"></bebidas>
+      <ion-list data-ng-repeat-end>
+        <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="chooseProduct(product)">
+          <h3 data-bo-bind="product.description"></h3>
+          <span data-bo-bind="product.toppings"></span>
+          <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
+        </ion-item>
+      </ion-list>
 
-      <promotions bindonce data-ng-model="menu.promo"></promotions>
 
     </ion-content>
 
