Adding pizzas/empanadas

--- a/app/scripts/product/templates/product-options.html
+++ b/app/scripts/product/templates/product-options.html
@@ -10,6 +10,8 @@
             <div class="item item-avatar">
                 <p>{{ product.description }}</p>
                 <p>{{ product.details }}</p>
+                <p>PRECIO BASE: {{ product.price.base | centsToMoney | currency }}</p>
+                <p>PRECIO ACTUALIZADO: {{ productTotalPrice | centsToMoney | currency }} </p>
             </div>
 
             <div class="item item-body">
@@ -17,27 +19,28 @@
               <div data-ng-repeat="option in product.options track by $index">
 
                 Seleccione {{ option.description }}:
+                <span data-ng-if="option.config.component == 'MULTIPLE_OPTION' ">(maximo {{ option.config.max }})</span>
 
-                <div data-ng-if="option.component == 'ONE_OPTION' ">
 
-                  <label class="item item-radio" data-ng-repeat="item in option.items">
-                    <input type="radio" name="groupOptions_{{$parent.$index}}">
+                <div data-ng-if="option.config.component == 'ONE_OPTION' ">
+
+                  <label class="item item-radio" data-ng-repeat="item in option.items" data-ng-click="updateOptionSelection(option, item)">
+                    <input type="radio" name="groupOptions_{{$parent.$index}}" />
                     <div class="item-content">
-                      {{ item.description }} <span data-ng-if="item.price > 0">(+ {{ item.price | centsToMoney | currency}} )</span>
+                      {{ item.description }} <span data-ng-if="item.price > 0">(+ {{ item.price | centsToMoney | currency }} )</span>
                     </div>
                     <i class="radio-icon ion-checkmark"></i>
                   </label>
-
 
                 </div>
 
 
 
-                <div data-ng-if="option.component == 'MULTIPLE_OPTION' ">
+                <div data-ng-if="option.config.component == 'MULTIPLE_OPTION' ">
 
                   <li class="item item-checkbox" data-ng-repeat="item in option.items">
-                    <label class="checkbox">
-                      <input type="checkbox" name="prod_option">
+                    <label class="checkbox" data-ng-click="updateOptionSelection(option, item)">
+                      <input type="checkbox" name="prod_option"/>
                     </label>
                     {{ item.description }} <span data-ng-if="item.price > 0">(+ {{ item.price | centsToMoney | currency}} )</span>
                   </li>
@@ -51,6 +54,11 @@
 
 
               </div>
+
+              <div class="button-bar">
+                <a class="button" data-ng-click="isSelectionValid()">CONFIRMAR</a>
+              </div>
+
             </div>
         </div>
 
