--- a/app/scripts/product/templates/product-options.html
+++ b/app/scripts/product/templates/product-options.html
@@ -19,11 +19,15 @@
                 Seleccione {{ option.description }}:
                 <span data-ng-if="!(option.config.min == 1 && option.config.max == 1)">(maximo {{ option.config.max }})</span>
 
-                <div data-ng-show="option.validationError">{{ option.validationError }}</div>
+                <div data-ng-show="!option.selectionValid.status">
+                  <span data-ng-show="option.selectionValid.error == 'OPTION_ERROR_NO_SELECTION'">Debe seleccionar una opcion</span>
+                  <span data-ng-show="option.selectionValid.error == 'OPTION_ERROR_MAX'">Debe seleccionar como maximo {{option.selectionValid.params.max}} opciones</span>
+                  <span data-ng-show="option.selectionValid.error == 'OPTION_ERROR_MIN'">Debe seleccionar al menos {{option.selectionValid.params.min}} opcion</span>
+                </div>
 
                 <div data-ng-if="option.config.min == 1 && option.config.max == 1">
 
-                  <label class="item item-radio" data-ng-repeat="item in option.items" data-ng-click="updateOptionSelection(option, item)">
+                  <label class="item item-radio" data-ng-repeat="item in option.items" data-ng-click="selectOptionAndRecalculatePrice(option, item)">
                     <input type="radio" name="groupOptions_{{$parent.$index}}" />
                     <div class="item-content">
                       {{ item.description }} <span data-ng-if="item.price > 0">(+ {{ item.price | centsToMoney | currency }} )</span>
@@ -38,7 +42,7 @@
                 <div data-ng-if="!(option.config.min == 1 && option.config.max == 1)">
 
                   <li class="item item-checkbox" data-ng-repeat="item in option.items">
-                    <label class="checkbox" data-ng-click="updateOptionSelection(option, item)">
+                    <label class="checkbox" data-ng-click="selectOptionAndRecalculatePrice(option, item)">
                       <input type="checkbox" name="prod_option"/>
                     </label>
                     {{ item.description }} <span data-ng-if="item.price > 0">(+ {{ item.price | centsToMoney | currency}} )</span>
