Replace category name by id in nav bar

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -22,17 +22,21 @@
         <ion-item nav-clear menu-close href="#/app/delivery">
             Metodo de Entrega
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/menu/pizza">
-          Pizzas
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/menu/empanada">
-          Empanadas
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/menu/bebida">
+        <ion-item nav-clear menu-close href="#/app/menu/1">
           Bebidas
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/menu/promo">
-          Promociones
+        <ion-item nav-clear menu-close href="#/app/menu/2">
+          Pastas
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/menu/4">
+          Sanwiches
+        </ion-item>
+
+        <ion-item nav-clear menu-close href="#/app/menu/6">
+          Pizzas
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/menu/5">
+          Empanadas
         </ion-item>
       </ion-list>
     </ion-content>
