Product selection - add to cart and hide modal

--- a/app/scripts/product/templates/product-options.html
+++ b/app/scripts/product/templates/product-options.html
@@ -59,7 +59,7 @@
               </div>
 
               <div class="button-bar">
-                <a class="button" data-ng-click="isSelectionValid()">CONFIRMAR</a>
+                <a class="button" data-ng-click="addProductSelectionToCart(productSelected)">CONFIRMAR</a>
               </div>
 
             </div>
