--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -25,6 +25,7 @@
   <ion-list show-delete="showDelete">
     <ion-item nav-clear data-ng-repeat="item in cart.products track by $index | orderBy:'+cat'">
       <div style="white-space: normal">{{item.cat}} {{item.getDescription()}}</div>
+      <div>{{item.getDetails()}}</div>
       <div>Cantidad: {{item.qty}}
           <qty ng-model="item" min="1" data-ng-show="showEdit && item.isEditable.qty" style="font: 0.5em;"></qty>
       </div>
