Product isEditable function updated

--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -27,13 +27,13 @@
       <div style="white-space: normal">{{item.cat}} {{item.getDescription()}}</div>
       <div>{{item.getDetails()}}</div>
       <div>Cantidad: {{item.qty}}
-          <qty ng-model="item" min="1" data-ng-show="showEdit && item.isEditable.qty" style="font: 0.5em;"></qty>
+          <qty ng-model="item" min="1" data-ng-show="showEdit && item.isEditable().qty" style="font: 0.5em;"></qty>
       </div>
       <div>Precio: {{item.totalPrice * item.qty | centsToMoney | currency}}</div>
       <button
               class="button button-light"
               data-ng-click="$parent.edit(item)"
-              data-ng-show="showEdit && item.isEditable.options">
+              data-ng-show="showEdit && item.isEditable().options">
         Editar Opciones
       </button>
 
