--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -20,9 +20,12 @@
 
       <ion-list data-ng-repeat-end>
         <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="chooseProduct(product)">
+            <!--TODO: this should be a product directive-->
           <h3 data-bo-bind="product.description"></h3>
           <span data-bo-bind="product.toppings"></span>
           <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
+            <!--TODO: this should be a product directive-->
+
         </ion-item>
       </ion-list>
 
