--- a/app/scripts/product/templates/product-options.html
+++ b/app/scripts/product/templates/product-options.html
@@ -19,17 +19,10 @@
                 Seleccione {{ option.description }}:
                 <span data-ng-if="!(option.config.min == 1 && option.config.max == 1)">(maximo {{ option.config.max }})</span>
 
-                <!--TODO: no need to status or params , option.selectionError is enough to cover all data. It should look like this...-->
-                  <!--<div data-ng-show="option.selectionError">-->
-                      <!--<span data-ng-show="option.selectionError == 'OPTION_ERROR_NO_SELECTION'">Debe seleccionar una opcion</span>-->
-                      <!--<span data-ng-show="option.selectionError == 'OPTION_ERROR_MAX'">Debe seleccionar como maximo {{option.config.max}} opciones</span>-->
-                      <!--<span data-ng-show="option.selectionError == 'OPTION_ERROR_MIN'">Debe seleccionar al menos {{option.config.min}} opcion</span>-->
-                  <!--</div>-->
-
-                <div data-ng-show="!option.selectionValid.status">
-                  <span data-ng-show="option.selectionValid.error == 'OPTION_ERROR_NO_SELECTION'">Debe seleccionar una opcion</span>
-                  <span data-ng-show="option.selectionValid.error == 'OPTION_ERROR_MAX'">Debe seleccionar como maximo {{option.selectionValid.params.max}} opciones</span>
-                  <span data-ng-show="option.selectionValid.error == 'OPTION_ERROR_MIN'">Debe seleccionar al menos {{option.selectionValid.params.min}} opcion</span>
+                <div data-ng-show="option.selectionError">
+                    <span data-ng-show="option.selectionError == 'OPTION_ERROR_NO_SELECTION'">Debe seleccionar una opcion</span>
+                    <span data-ng-show="option.selectionError == 'OPTION_ERROR_MAX'">Debe seleccionar como maximo {{option.config.max}} opciones</span>
+                    <span data-ng-show="option.selectionError == 'OPTION_ERROR_MIN'">Debe seleccionar al menos {{option.config.min}} opcion</span>
                 </div>
 
                 <div data-ng-if="option.config.min == 1 && option.config.max == 1">
