--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -29,7 +29,7 @@
       <div>Cantidad: {{item.qty}}
           <qty ng-model="item" min="1" data-ng-show="showEdit && item.isEditable().qty" style="font: 0.5em;"></qty>
       </div>
-      <div>Precio: {{item.totalPrice * item.qty | centsToMoney | currency}}</div>
+      <div>Precio: {{item.calculateTotalPrice() * item.qty | centsToMoney | currency}}</div>
       <button
               class="button button-light"
               data-ng-click="$parent.edit(item)"
