Refactor: products moved over to directive

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -13,22 +13,7 @@
 
     <ion-content class="has-header">
 
-      <div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu track by $index">
-        <strong data-bo-bind="cat.description"></strong>
-      </div>
-
-
-      <ion-list data-ng-repeat-end>
-        <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="chooseProduct(product)">
-            <!--TODO: this should be a product directive-->
-          <h3 data-bo-bind="product.description"></h3>
-          <span data-bo-bind="product.toppings"></span>
-          <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
-            <!--TODO: this should be a product directive-->
-
-        </ion-item>
-      </ion-list>
-
+      <product data-ng-model="menu"></product>
 
     </ion-content>
 
