refactored cart edit item view + added qty to options

--- a/app/scripts/product/templates/product-options.html
+++ b/app/scripts/product/templates/product-options.html
@@ -8,6 +8,7 @@
 
             <div class="item item-avatar">
               <p>CANTIDAD</p>
+                <qty ng-model="productSelected" min="1"></qty>
               <p>PLACEHOLDER PARA QTY DIRECTIVE</p>
 
             </div>
