--- a/app/scripts/product/templates/product-view.html
+++ b/app/scripts/product/templates/product-view.html
@@ -6,7 +6,7 @@
 
   <ion-content>
 
-    <product-options data-ng-model="product"></product-options>
+    <product-options data-ng-model="productToChange"></product-options>
 
     <div class="button-bar">
       <a class="button button-royal" data-ng-click="productOptions.hide()">Cancelar</a>
