--- a/app/scripts/contact/templates/contact-info.html
+++ b/app/scripts/contact/templates/contact-info.html
@@ -1,5 +1,9 @@
 <ion-view title="Ingreso de datos">
 
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+
     <ion-content class="has-header">
         <contact></contact>
     </ion-content>
