--- a/app/scripts/delivery/templates/delivery-option.html
+++ b/app/scripts/delivery/templates/delivery-option.html
@@ -1,4 +1,8 @@
-<ion-view title="Metodo de Entrega" hide-back-button="true">
+<ion-view title="Metodo de Entrega">
+
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
 
     <ion-content class="has-header">
         <delivery></delivery>
