--- a/app/scripts/store/templates/stores.html
+++ b/app/scripts/store/templates/stores.html
@@ -1,5 +1,9 @@
 <ion-view title="Locales">
 
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+
     <ion-content class="has-header">
 
         <ion-list data-ng-controller="StoresCtrl">
