--- a/app/scripts/product/templates/product-options.html
+++ b/app/scripts/product/templates/product-options.html
@@ -2,8 +2,7 @@
             <div class="item item-avatar">
                 <p>{{ productSelected.description }}</p>
                 <p>{{ productSelected.details }}</p>
-                <p>PRECIO BASE: {{ productSelected.price.base | centsToMoney | currency }}</p>
-                <p>PRECIO ACTUALIZADO: {{ productSelected.calculateTotalPrice() | centsToMoney | currency }} </p>
+                <p>Precio por Unidad: {{ productSelected.calculateTotalPrice() | centsToMoney | currency }}</p>
             </div>
 
             <div class="item item-avatar">
