cancelar button styled, desktop version fixed width

--- a/app/scripts/product/templates/product-view.html
+++ b/app/scripts/product/templates/product-view.html
@@ -8,8 +8,8 @@
 
     <product-options data-ng-model="productToChange"></product-options>
 
-    <div class="button-bar">
-      <a class="button button-royal" data-ng-click="productOptions.hide()">Cancelar</a>
+    <div class="item">
+      <a class="button button-block button-royal" data-ng-click="productOptions.hide()">Cancelar</a>
     </div>
 
   </ion-content>
