--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,5 +1,18 @@
 /* Your app's SASS, go crazy, make it your own */
 
+@media only screen and (min-width: 1224px)
+  .view
+    width: 670px
+  .modal-backdrop
+    width: 670px
+  .modal-wrapper
+    width: 670px
+  .modal
+    top: 0
+    left: 0
+    width: 670px
+    height: 100%
+
 .ionic-logo
   display: block
   margin: 15px auto
@@ -22,3 +35,4 @@ form input + i.icon.success
 
 .todayHours
   background-color: red
+
