cancelar boton style cleanup

--- a/app/scripts/product/templates/product-view.html
+++ b/app/scripts/product/templates/product-view.html
@@ -7,10 +7,11 @@
   <ion-content>
 
     <product-options data-ng-model="productToChange"></product-options>
-
-    <div class="item">
-      <a class="button button-block button-royal" data-ng-click="productOptions.hide()">Cancelar</a>
-    </div>
+      <div class="list card" style="margin-top:0px">
+        <div class="item item-divider">
+          <a class="button button-block" data-ng-click="productOptions.hide()">Cancelar</a>
+        </div>
+      </div>
 
   </ion-content>
 
