--- a/app/scripts/contact/templates/contact.html
+++ b/app/scripts/contact/templates/contact.html
@@ -1,4 +1,5 @@
 <div class="list">
+    <!--TODO: add address validation error and move this to store radio validation-->
     <div class="bar bar-header bar-assertive" ng-if="error">
         {{error}} - Queres pasar a buscar el pedido por local?
         <div>
