--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -16,7 +16,7 @@
         <ion-item nav-clear menu-close href="#/app/menu">
           Menu
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/stores">
+        <ion-item nav-clear menu-close href="#/app/stores/pickup">
           Locales
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/delivery">
