--- a/app/scripts/product/templates/product.html
+++ b/app/scripts/product/templates/product.html
@@ -1,5 +1,5 @@
-<ion-item bindonce data-ng-click="chooseProduct(product)">
-    <h3 data-bo-bind="product.description"></h3>
-    <span data-bo-bind="product.toppings"></span>
-    <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
+<ion-item data-ng-click="::chooseProduct(product)">
+    <h3 data-ng-bind="::product.description"></h3>
+    <span data-ng-bind="::product.toppings"></span>
+    <span data-ng-bind="::product.price.base | centsToMoney | currency"></span>
 </ion-item>
