--- a/app/scripts/review/templates/review.html
+++ b/app/scripts/review/templates/review.html
@@ -1,27 +1,27 @@
 <!--<pre>{{ order | json }}</pre>-->
 
-<ion-list bindonce="order">
+<ion-list>
     <ion-item class="item-divider">Productos</ion-item>
-    <ion-item data-ng-repeat="product in order.products track by $index">
-        <span data-bo-bind="product.qty"></span>: <span data-bo-bind="product.getDescription()"></span>
+    <ion-item data-ng-repeat="product in ::order.products track by $index">
+        <span data-ng-bind="::product.qty"></span>: <span data-ng-bind="::product.getDescription()"></span>
         <br/>
-        <span data-bo-bind="product.getDetails()"></span>
+        <span data-ng-bind="::product.getDetails()"></span>
 
       <div data-ng-if="product.cat == 'PROMO'">
-        <div bindonce data-ng-repeat="item in product.items track by $index">
-          <span data-bo-bind="item.qty"></span> - <span data-bo-bind="item.description"></span>
+        <div data-ng-repeat="item in ::product.items track by $index">
+          <span data-ng-bind="::item.qty"></span> - <span data-ng-bind="::item.description"></span>
         </div>
       </div>
     </ion-item>
 
     <ion-item class="item-divider">
-        Total <span data-bo-bind="order.totalPrice() | centsToMoney | currency"></span>
+        Total <span data-ng-bind="::order.totalPrice() | centsToMoney | currency"></span>
     </ion-item>
-    <ion-item data-bo-bind="order.delivery"></ion-item>
+    <ion-item data-ng-bind="::order.delivery"></ion-item>
     <ion-item>
-        <span data-bo-bind="order.contact.name"></span> -
-        <span data-bo-bind="order.contact.phone"></span> -
-        <span data-bo-bind="order.contact.email"></span>
+        <span data-ng-bind="::order.contact.name"></span> -
+        <span data-ng-bind="::order.contact.phone"></span> -
+        <span data-ng-bind="::order.contact.email"></span>
     </ion-item>
 </ion-list>
 
